[project]
name = "rx-events"
version = "0.1.0"
description = "Event-driven system with acknowledgment tracking using Pydantic and ReactiveX"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "reactivex>=4.1.0",
]
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AURORA", email = ""}
]
keywords = ["events", "event-driven", "reactive", "rx", "pydantic", "acknowledgment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["rx_events"]
